styles.css goed gekoppeld in mapje

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Bull Explained</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -23,6 +23,7 @@
     <main>
         <h1>Red Bull Explained</h1>
         <p>Welkom op deze website!</p>
+        <p>Op deze website zal ik alles uitleggen wat red bull in de wereld doet!</p>
     </main>
     <footer></footer>
 </body>
