--- a/drankjes.html
+++ b/drankjes.html
@@ -22,6 +22,7 @@
     </header>
     <main>
         <h1>Drankjes</h1>
+        <h2>alle verschillende soorten!</h2>
         <p>Hier is Red Bull groot mee geworden!</p>
     </main>
     <footer></footer>
