tekst en fotoossss

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RBIV</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -20,10 +20,10 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="index">
         <h1>Red Bull in vogelvlucht</h1>
         <h2>Bijna net zo snel als Max Verstappen</h2>
-        <p>Welkom op de website van RBIV. Op deze website vind je een hele hoop informatie over Red Bull, en dat in
+        <p class="inleiding">Welkom op de website van RBIV. Op deze website vind je een hele hoop informatie over Red Bull, en dat in
             slechts 4 pagina’s! Red Bull begon als een klein bedrijf in Oostenrijk dat enkel energiedrankjes aanbood,
             maar is tegenwoordig niet meer weg te denken uit onder anderen de sportwereld, het uitgaansleven en de
             muziekwereld. Het doel van deze website is om jou als bezoeker te laten zien dat dit bedrijf enorm veel
