--- a/drankjes.html
+++ b/drankjes.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drankjes</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -24,39 +24,71 @@
         
             <h1>Drankjes</h1>
             <h2>Ook lekker met wodka</h2>
-            <p>Op deze pagina vind je alle smaken energiedrankjes die Red Bull op dit moment aanbiedt in Nederland!</p>
+            <p class="inleiding">Op deze pagina vind je alle smaken energiedrankjes die Red Bull op dit moment aanbiedt in Nederland!</p>
         <article>
+            
             <img class="blik" src="./images/bliknormaal.webp" alt="Red Bull Blik normaal">
-            <h3>Red Bull Classic</h3>
-            <h4>De veilige keuze</h4>
+            <section>
+                <h3>Red Bull Classic</h3>
+                <h4>Stimuleert Lichaam en Geest.</h4>
+                <p>Wereldwijd gewaardeerd door topsporters en studenten maar ook bij werk dat veel van je vraagt en tijdens lange autoritten.</p>
+            </section>
         </article>
         <article>
             <img class="blik" src="./images/bliksugarfree.webp" alt="Red Bull Blik Sugarfree">
-            <h3>Red Bull Sugarfree</h3>
+            <section>
+                <h3>Red Bull Sugarfree</h3>
+                <h4>Geen suiker wel vleugels</h4>
+                <p>Wereldwijd gewaardeerd door topsporters en studenten maar ook bij werk dat veel van je vraagt en tijdens lange autoritten.</p>
+            </section>
         </article>
         <article>
             <img class="blik" src="./images/blikzero.webp" alt="Red Bull Blik Zero">
-            <h3>Red Bull Zero</h3>
-        </article>
+                <section>
+                    <h3>Red Bull Zero</h3>
+                    <h4>Zero suikers. 100% vleugels.</h4>
+                    <p>Wereldwijd gewaardeerd door topsporters en studenten maar ook bij werk dat veel van je vraagt en tijdens lange autoritten.</p>
+                </section>    
+            </article>
         <article>
             <img class="blik" src="./images/bliktropical.webp" alt="Red Bull Blik Tropical Edition">
-            <h3>Red Bull Tropical Edition</h3>
-        </article>
+            <section>
+                <h3>Red Bull Tropical Edition</h3>
+                <h4>Voor op het strand</h4>
+                <p>Laat je verrassen door de exotische smaak van tropisch fruit.</p>
+            </section>       
+            </article>
         <article>
             <img class="blik" src="./images/blikblue.webp" alt="Red Bull Blik Blue Edition">
-            <h3>Red Bull Blue Edition</h3>
+            <section>
+                <h3>Red Bull Blue Edition</h3>
+                <h4>Daar wil je er meer van</h4>
+                <p>De fruitige smaak van bosbes gecombineerd met de vleugels van Red Bull maakt de Blue Edition zo speciaal.</p>
+            </section>  
         </article>
         <article>
             <img class="blik" src="./images/blikwhite.webp" alt="Red Bull Blik White Edition">
-            <h3>Red Bull White Edition</h3>
+            <section>
+                <h3>Red Bull White Edition</h3>
+                <h4>Voor de malloten die van kokos houden</h4>
+                <p>Maak je klaar voor een buitengewone smaakervaring. De Red Bull White Edition heeft de smaak van exotische kokosnoot en fruitige açaibessen.</p>
+            </section>
         </article>
         <article>
             <img class="blik" src="./images/blikred.webp" alt="Red Bull Blik Red Edition">
-            <h3>Red Bull Red Edition</h3>
+            <section>
+                <h3>Red Bull Red Edition</h3>
+                <h4>Watermelon, sugar, hi</h4>
+                <p>De Red Edition met de frisse smaak van watermeloen.</p>
+            </section>
         </article>
         <article>
-            <img class="blik" src="./images/bliksummer.webp" alt="Red Bull Blik Summer Edition">
-            <h3>Red Bull Summer Edition</h3>
+            <img class="blik" src="./images/bliksummer.webp" alt="Red Bull Blik Summer Edition">\
+            <section>
+                <h3>Red Bull Summer Edition</h3>
+                <h4>Vleugels voor je zomer</h4>
+                <p>De Red Bull Summer Edition met de verfrissende smaak van cactusvrucht. Geniet van je zomer!</p>
+            </section>
         </article>
     </main>
     <footer></footer>
